--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,9 @@
 	author = {Franco Caspe and Jordie Shier and Mark Sandler and Charalampos Saitis and Andrew McPherson},
 	journal = {Journal of the Audio Engineering Society},
 	title = {Designing neural synthesizers for low latency interaction (in press)},
+	pdf = {https://arxiv.org/abs/2503.11562},
+ 	code = {https://github.com/fcaspe/BRAVE},
+	tryit = {https://fcaspe.github.io/BravePlugin/},
 	year = {2025}}
 
 @inproceedings{haokun_icassp_2025,
@@ -96,6 +99,7 @@
 	title = {Automatic detection of moral values in music lyrics},
 	booktitle = {{International Society for Music Information Retrieval Conference}},
 	arxiv = {2407.18787},
+	tryit = {https://huggingface.co/spaces/vjosap/MoralBERTApp},
 	year = {2024}}
 
 @inproceedings{vjosa_MoralBERT_2024,
@@ -107,6 +111,7 @@
 	booktitle = {ACM International Conference on Information Technology for Social Good},
 	code = {https://github.com/vjosapreniqi/MoralBERT},
 	arxiv = {2403.07678},
+	tryit = {https://huggingface.co/spaces/vjosap/MoralBERTApp},
 	year = {2024}}
 
 @inproceedings{jincheng_MLSP_2024,
