--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -121,6 +121,8 @@
 	journal = {arXiv},
 	abstract = {Emerging Denoising Diffusion Probabilistic Models (DDPM) have become increasingly utilised because of promising results they have achieved in diverse generative tasks with continuous data, such as image and sound synthesis. Nonetheless, the success of diffusion models has not been fully extended to discrete symbolic music. We propose to combine a vector quantized variational autoencoder (VQ-VAE) and discrete diffusion models for the generation of symbolic music with desired composer styles. The trained VQ-VAE can represent symbolic music as a sequence of indexes that correspond to specific entries in a learned codebook. Subsequently, a discrete diffusion model is used to model the VQ-VAE's discrete latent space. The diffusion model is trained to generate intermediate music sequences consisting of codebook indexes, which are then decoded to symbolic music using the VQ-VAE's decoder. The evaluation results demonstrate our model can generate symbolic music with target composer styles that meet the given conditions with a high accuracy of 72.36\%. Our code is available at [URL will be provided here].},
 	booktitle = {IEEE International Workshop on Machine Learning for Signal Processing},
+	pdf = {https://arxiv.org/pdf/2310.14044},
+	code = {https://github.com/jinchengzhanggg/VQVAE-Diffusion},
 	year = {2024}}
 
 @inproceedings{charis_dgm_2024,
