--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,9 +16,26 @@
 	title = {Hearing brightness: Multidisciplinary perspectives on a ubiquitous attribute of timbre and orchestration (in press)},
 	year = {2025}}
 
+@inproceedings{charis_nime_2025,
+	abbr = {NIME},
+	year = {2025},
+	author = {Charalampos Saitis and Courtney N Reed and Ashley Noel-Hirst and Giacomo Lepri and Andrew McPherson},
+	title = {{(De)Constructing timbre at NIME: Reflecting on technology and aesthetic entanglements in instrument design}},
+	booktitle = {{International Conference on New Interfaces for Musical Expression}},
+	abstract = {Timbre, pitch, and timing are often relevant in digital musical instrument (DMI) design. Amongst the three, timbre is the most difficult to define and discretise when negotiating audio repre- sentations and gesture-sound mappings. We conduct a corpus-assisted discourse analysis of ``timbre'' in all NIME proceedings to date (2001–2024). Combining this with a detailed review of 18 timbre-focused papers, we examine how definitions of timbre and timbre interaction methods are constructed through, for instance, Wessel's numerical timbre control space, synthesis tools and programming languages, machine learning and AI approaches, and other trends in digital lutherie practices. While acknowledging the practical utility of technical constructions of timbre in NIME (and other digital music research communities), we contribute discussion on the entanglement of technology and aesthetics in instrument design, which constitutes what ``timbre' becomes in NIME research, and reflect on the tension between technoscientific and constructivist understandings of timbre: how DMIs and musical practices have been reconstituted around particular timbral values operationalised in NIME. In response, we propose ways that the community can embrace more critical approaches and awareness to how our methods and tools shape and co-create our notions of timbre, as well as other musical concepts, connecting more openly with diverse types of sonic phenomena.}}
+
+@inproceedings{tug_nime_2025,
+	abbr = {NIME},
+	year = {2025},
+	author = {Tug F. O'Flaherty and Luigi Marino and Charalampos Saitis and Anna Xambó Sedó},
+	website = {https://sites.google.com/view/sonicolour-sc-1},
+	title = {{Sonicolour: Exploring colour control of sound synthesis with interactive machine learning}},
+	booktitle = {{International Conference on New Interfaces for Musical Expression}},
+	abstract = {This paper explores crossmodal mappings of colour to sound. The instrument presented analyses the colour of physical objects via a colour light-to-frequency sensor and maps the corresponding red, green, and blue data values to parameters of a synthesiser. Interactive machine learning is used to facilitate the discovery of new relationships between sound and colour. The role of interactive machine learning is to find unexpected relationships between the visual features of the objects and the sound synthesis. The performance is evaluated by its ability to provide the user with a playful interaction between the visual and tactile exploration of coloured objects, and the generation of synthetic sounds. We conclude by outlining the potential of this approach for musical interaction design and music performance.}}
+
 @article{franco_jaes_2025,
 	abbr = {JAES},
-	abstract = {Forthcoming.},
+	abstract = {Neural Audio Synthesis (NAS) models offer interactive musical control over high-quality, expressive audio generators. While these models can operate in real-time, they often suffer from high latency, making them unsuitable for intimate musical interaction. The impact of architectural choices in deep learning models on audio latency remains largely unexplored in the NAS literature. In this work, we investigate the sources of latency and jitter typically found in interactive NAS models. We then apply this analysis to the task of timbre transfer using RAVE, a convolutional variational autoencoder for audio waveforms introduced by Caillon et al. in 2021. Finally, we present an iterative design approach for optimizing latency. This culminates with a model we call BRAVE (Bravely Realtime Audio Variational autoEncoder), which is low-latency and exhibits better pitch and loudness replication while showing timbre modification capabilities similar to RAVE. We implement it in a specialized inference framework for low-latency, real-time inference and present a proof-of-concept audio plugin compatible with audio signals from musical instruments. We expect the challenges and guidelines described in this document to support NAS researchers in designing models for low-latency inference from the ground up, enriching the landscape of possibilities for musicians.},
 	author = {Franco Caspe and Jordie Shier and Mark Sandler and Charalampos Saitis and Andrew McPherson},
 	journal = {Journal of the Audio Engineering Society},
 	title = {Designing neural synthesizers for low latency interaction (in press)},
