--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,15 @@
 	title = {Hearing brightness: Multidisciplinary perspectives on a ubiquitous attribute of timbre and orchestration (in press)},
 	year = {2025}}
 
+@inproceedings{jincheng_ijcnn_2025,
+	abbr = {IJCNN},
+	year = {2025},
+	author = {Zhang, Jincheng and Fazekas, Gy{\"o}rgy and Saitis, Charalampos},
+	title = {{Mamba-diffusion model with learnable wavelet for controllable symbolic music generation}},
+	booktitle = {{International Joint Conference on Neural Networks}},
+	code = {https://github.com/jinchengzhanggg/proffusion}
+	abstract = {The recent surge in the popularity of diffusion models for image synthesis has attracted new attention to their potential for generation tasks in other domains. However, their applications to symbolic music generation remain largely under-explored because symbolic music is typically represented as sequences of discrete events and standard diffusion models are not well-suited for discrete data. We represent symbolic music as image-like pianorolls, facilitating the use of diffusion models for the generation of symbolic music. Moreover, this study introduces a novel diffusion model that incorporates our proposed Transformer-Mamba block and learnable wavelet transform. Classifier-free guidance is utilised to generate symbolic music with target chords. Our evaluation shows that our method achieves compelling results in terms of music quality and controllability, outperforming the strong baseline in pianoroll generation.}}
+
 @inproceedings{charis_nime_2025,
 	abbr = {NIME},
 	year = {2025},
