Update papers.bib Jordie NIME

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,23 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{jordie_nime_2025,
+	abbr = {NIME},
+	year = {2025},
+	author = {Jordie Shier and Rodrigo Constanzo and Charalampos Saitis and Andrew Robertson and Andrew McPherson},
+	title = {{Designing Percussive Timbre Remappings: Negotiating Audio Representations and Evolving Parameter Spaces}},
+	booktitle = {{International Conference on New Interfaces for Musical Expression}},
+	website = {https://jordieshier.com/projects/nime2025/},
+	abstract = {Timbre remapping is an approach to audio-to-synthesizer parameter mapping that aims to transfer timbral expressions from a source instrument onto synthesizer controls. This process is complicated by the ill-defined nature of timbre and the complex relationship between synthesizer parameters and their sonic output. In this work, we focus on real-time timbre remapping with percussion instruments, combining technical development with practice-based methods to address these challenges. As a technical contribution, we introduce a genetic algorithm -- applicable to black-box synthesizers including VSTs and modular synthesizers -- to generate datasets of synthesizer presets that vary according to target timbres. Additionally, we propose a neural network-based approach to predict control features from short onset windows, enabling low-latency performance and feature-based control. Our technical development is grounded in musical practice, demonstrating how iterative and collaborative processes can yield insights into open-ended challenges in DMI design. Experiments on various audio representations uncover meaningful insights into timbre remapping by coupling data-driven design with practice-based reflection. This work is accompanied by an annotated portfolio, presenting a series of musical performances and experiments with reflections.}}
+
+@inproceedings{jordie_nime_music_2025,
+	abbr = {NIME},
+	year = {2025},
+	author = {Jordie Shier and Xiaowan Yi},
+	title = {{Diffy}},
+	booktitle = {{International Conference on New Interfaces for Musical Expression Music Track}},
+	abstract = {Diffy is a duo music project comprising a drummer and a sound designer, connected by a set of machine learning-based sound design agents. In this project, we explore and juxtapose a set of three machine learning-based techniques for manipulating the timbral qualities of percussion instruments in real-time with low-latency. These techniques include a neural audio synthesizer trained on non-percussive material, a timbre remapping 808 drum synthesizer, and a modular synthesizer controlled by a neural network. Each sound design agent operates on different modes of timbral understanding -- reacting to the drum performance based on this understanding, and suggesting sonic transformations. Sonic negotiations between the human sound designer and the sound-design agent are relayed back to the drummer, creating a feedback loop that shapes a structured improvisation.}}
+
 @inproceedings{lewis_nime_2025,
 	abbr = {NIME},
 	year = {2025},
