--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{charis_OHOS_2025,
+	abbr = {OHOS},
+	abstract = {Orchestration can have undeniable effects on what listeners hear as changes in auditory brightness. But the precise source of our sensation of brightness in orchestral music is difficult to pinpoint. What is the locus of brightness in terms of perception and orchestration? Moreover, how do separate notions of timbre and orchestration spanning music theory, composition, acoustics, and psychology each offer possible explanations? In this chapter, we attempt to articulate and distinguish between two modes: timbral brightness---the psychophysical perception of brightness in a given instance of sound, and orchestral brightness---the experience of brightness in the configuration and unfolding of orchestral music. We approach the central question from a multidisciplinary vantage, attempting to hold any tensions between the two modes without resolution.},
+	author = {Charalampos Saitis and Kai Siedenburg and Moe Touizrar},
+	editor = {Julie Delisle and Robert Hasegawa and Jason Noble and Moe Touizrar},
+	booktitle = {The Oxford Handbook of Orchestration Studies},
+	title = {Hearing brightness: Multidisciplinary perspectives on a ubiquitous attribute of timbre and orchestration (in press)},
+	year = {2025}}
+
 @inproceedings{jordie_nime_2025,
 	abbr = {NIME},
 	year = {2025},
@@ -31,15 +40,6 @@
 	booktitle = {{International Conference on New Interfaces for Musical Expression}},
 	abstract = {We here outline the concept design of an augmented percussion instrument, conceived for and used as part of a variety of distinct performances and compositions. Throughout the curation of this project, each creative act has enabled us to contextualise, examine and reflect upon the design of this augmented instrument. In accordance with Stolterman and Wiberg’s concept driven design methodology, we do not present a singular instrument design, but instead an overarching design concept alongside its developmental and evaluative narrative. This augmentation centres upon the use of a drum trigger and a tactile transducer, which when coupled together can be used to feedback or resonate a drum. The resultant soundworld develops upon the idiomatic sonority of a drum, and allows for the duration and timbre of a drum strike to be continuously manipulated and shaped throughout a performance. In exploring the soundworld which results from this approach, we have experimented with numerous configurations of these pieces of hardware, and have also employed various pieces of software to parametrise the sonic subtleties that this approach engenders. Most prominently, we have developed a bespoke piece of software which analyses the modes of a drum prior to performance, and uses this modal analysis to shape the overall feedback and resonance. Throughout this design process, we have consistently been met with new creative criteria that challenge our approach and ideas, in response to the particularities of the musicians we are working alongside, as well as the performative and aesthetic environments we are working within.}}
 
-@inproceedings{charis_OHOS_2025,
-	abbr = {OHOS},
-	abstract = {Orchestration can have undeniable effects on what listeners hear as changes in auditory brightness. But the precise source of our sensation of brightness in orchestral music is difficult to pinpoint. What is the locus of brightness in terms of perception and orchestration? Moreover, how do separate notions of timbre and orchestration spanning music theory, composition, acoustics, and psychology each offer possible explanations? In this chapter, we attempt to articulate and distinguish between two modes: timbral brightness---the psychophysical perception of brightness in a given instance of sound, and orchestral brightness---the experience of brightness in the configuration and unfolding of orchestral music. We approach the central question from a multidisciplinary vantage, attempting to hold any tensions between the two modes without resolution.},
-	author = {Charalampos Saitis and Kai Siedenburg and Moe Touizrar},
-	editor = {Julie Delisle and Robert Hasegawa and Jason Noble and Moe Touizrar},
-	booktitle = {The Oxford Handbook of Orchestration Studies},
-	title = {Hearing brightness: Multidisciplinary perspectives on a ubiquitous attribute of timbre and orchestration (in press)},
-	year = {2025}}
-
 @inproceedings{jincheng_ijcnn_2025,
 	abbr = {IJCNN},
 	year = {2025},
@@ -56,7 +56,8 @@
 	author = {Charalampos Saitis and Courtney N Reed and Ashley Noel-Hirst and Giacomo Lepri and Andrew McPherson},
 	title = {{(De)Constructing timbre at NIME: Reflecting on technology and aesthetic entanglements in instrument design}},
 	booktitle = {{International Conference on New Interfaces for Musical Expression}},
-	abstract = {Timbre, pitch, and timing are often relevant in digital musical instrument (DMI) design. Amongst the three, timbre is the most difficult to define and discretise when negotiating audio repre- sentations and gesture-sound mappings. We conduct a corpus-assisted discourse analysis of ``timbre'' in all NIME proceedings to date (2001–2024). Combining this with a detailed review of 18 timbre-focused papers, we examine how definitions of timbre and timbre interaction methods are constructed through, for instance, Wessel's numerical timbre control space, synthesis tools and programming languages, machine learning and AI approaches, and other trends in digital lutherie practices. While acknowledging the practical utility of technical constructions of timbre in NIME (and other digital music research communities), we contribute discussion on the entanglement of technology and aesthetics in instrument design, which constitutes what ``timbre' becomes in NIME research, and reflect on the tension between technoscientific and constructivist understandings of timbre: how DMIs and musical practices have been reconstituted around particular timbral values operationalised in NIME. In response, we propose ways that the community can embrace more critical approaches and awareness to how our methods and tools shape and co-create our notions of timbre, as well as other musical concepts, connecting more openly with diverse types of sonic phenomena.}}
+	abstract = {Timbre, pitch, and timing are often relevant in digital musical instrument (DMI) design. Amongst the three, timbre is the most difficult to define and discretise when negotiating audio repre- sentations and gesture-sound mappings. We conduct a corpus-assisted discourse analysis of ``timbre'' in all NIME proceedings to date (2001–2024). Combining this with a detailed review of 18 timbre-focused papers, we examine how definitions of timbre and timbre interaction methods are constructed through, for instance, Wessel's numerical timbre control space, synthesis tools and programming languages, machine learning and AI approaches, and other trends in digital lutherie practices. While acknowledging the practical utility of technical constructions of timbre in NIME (and other digital music research communities), we contribute discussion on the entanglement of technology and aesthetics in instrument design, which constitutes what ``timbre' becomes in NIME research, and reflect on the tension between technoscientific and constructivist understandings of timbre: how DMIs and musical practices have been reconstituted around particular timbral values operationalised in NIME. In response, we propose ways that the community can embrace more critical approaches and awareness to how our methods and tools shape and co-create our notions of timbre, as well as other musical concepts, connecting more openly with diverse types of sonic phenomena.},
+	pdf = {nime2025_75_camera_ready.pdf}}
 
 @inproceedings{tug_nime_2025,
 	abbr = {NIME},
