--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,30 @@
 	title = {Hearing brightness: Multidisciplinary perspectives on a ubiquitous attribute of timbre and orchestration (in press)},
 	year = {2025}}
 
+@inproceedings{ben_ismir_2025,
+	abbr = {ISMIR},
+	year = {2025},
+	author = {Ben Hayes and Charalampos Saitis and György Fazekas},
+	title = {Audio synthesizer inversion in symmetric parameter spaces with approximately equivariant flow matching},
+	booktitle = {{International Society for Music Information Retrieval Conference}},
+	abstract = {Many audio synthesizers can produce the same signal given different parameter configurations, meaning the inversion from sound to parameters is an inherently ill-posed problem. We show that this is largely due to intrinsic symmetries of the synthesizer, and focus in particular on permutation invariance. First, we demonstrate on a synthetic task that regressing point estimates under permutation symmetry degrades performance, even when using a permutation-invariant loss function or symmetry-breaking heuristics. Then, viewing equivalent solutions as modes of a probability distribution, we show that a conditional generative model substantially improves performance. Further, acknowledging the invariance of the implicit parameter distribution, we find that performance is further improved by using a permutation equivariant continuous normalizing flow. To accommodate intriciate symmetries in real synthesizers, we also propose a relaxed equivariance strategy that adaptively discovers relevant symmetries from data. Applying our method to Surge XT, a full-featured open source synthesizer used in real world audio production, we find our method outperforms regression and generative baselines across audio reconstruction metrics.}}
+
+@inproceedings{haokun_ismir_2025,
+	abbr = {ISMIR},
+	year = {2025},
+	author = {Haokun Tian and Stefan Lattner and Charalampos Saitis},
+	title = {Assessing the alignment of audio representations with timbre similarity ratings},
+	booktitle = {{International Society for Music Information Retrieval Conference}},
+	abstract = {Psychoacoustical so-called “timbre spaces” map perceptual similarity ratings of instrument sounds onto low-dimensional embeddings via multidimensional scaling but suffer from scalability issues and are incapable of generalization. Recent results from audio (music and speech) quality assessment as well as image similarity have shown that deep learning provides emergent embeddings that align well with human perception while being largely free from these constraints. Although the existing 'timbre space' data is not large enough to train deep neural networks (only 2,614 pairwise ratings on 334 audio samples), it is sufficient and suitable for evaluating existing audio models. In this paper, we introduce metrics to assess the alignment of diverse audio representations with human judgements of timbre similarity by comparing both the absolute values and the rankings of embedding distances to human dissimilarity ratings. Our evaluation involves 3 signal-processing based methods, 10 pretrained models, and a novel sound matching model where three representations (including 'style' embeddings inspired by the style transfer task in the vision domain) are extracted and evaluated. Our analysis reveals that CLAP-based models and the style embeddings from our sound matching model achieve marginal gains over alternatives, yet MFCC remains competitive—underscoring gaps in current deep features’ ability to encode timbre similarity.}}
+
+@inproceedings{ash_aimc_2025,
+	abbr = {AIMC},
+	year = {2025},
+	author = {Ash Noel-Hirst and Charalampos Saitis and Nick Bryan-Kinns},
+	title = {Sampling the latent space: exploring the creative potential of generative AI through the lens of sample-based music making},
+	booktitle = {{Conference on AI Music Creativity}},
+	abstract = {Sample-based composition is a century-old practice in which artists repurpose existing sounds to create new music. As generative AI (GenAI) systems increasingly reuse existing material, they are often compared to sampling and remix practices. In this paper, we draw on the relatively mature tradition of sampling to address a key concern of GenAI: how can a tool which is dependent on the recycling of existing art support meaningful creativity? We present an ethnography and thematic analysis of a sample-based music community, connecting these insights to contemporary challenges in GenAI design. We discuss how designers might support artists in engaging with environmental, fictional, communal, and agential dimensions of GenAI models and data, building on literature about sample-based music to speak not only to generative music but to GenAI systems more broadly.}}
+
 @inproceedings{jordie_nime_2025,
 	abbr = {NIME},
 	year = {2025},
