--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,9 @@
 	author = {Ben Hayes and Charalampos Saitis and György Fazekas},
 	title = {Audio synthesizer inversion in symmetric parameter spaces with approximately equivariant flow matching},
 	booktitle = {{International Society for Music Information Retrieval Conference}},
+	paper = {https://arxiv.org/abs/2506.07199},
+	code = {https://github.com/ben-hayes/synth-permutations},
+	tryit = {https://benhayes.net/synth-perm/},
 	abstract = {Many audio synthesizers can produce the same signal given different parameter configurations, meaning the inversion from sound to parameters is an inherently ill-posed problem. We show that this is largely due to intrinsic symmetries of the synthesizer, and focus in particular on permutation invariance. First, we demonstrate on a synthetic task that regressing point estimates under permutation symmetry degrades performance, even when using a permutation-invariant loss function or symmetry-breaking heuristics. Then, viewing equivalent solutions as modes of a probability distribution, we show that a conditional generative model substantially improves performance. Further, acknowledging the invariance of the implicit parameter distribution, we find that performance is further improved by using a permutation equivariant continuous normalizing flow. To accommodate intriciate symmetries in real synthesizers, we also propose a relaxed equivariance strategy that adaptively discovers relevant symmetries from data. Applying our method to Surge XT, a full-featured open source synthesizer used in real world audio production, we find our method outperforms regression and generative baselines across audio reconstruction metrics.}}
 
 @inproceedings{haokun_ismir_2025,
