--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -339,6 +339,14 @@
   abstract = {Music has always been an integral part of our everyday lives through which we express feelings, emotions, and concepts. Here, we explore the association between music genres, demographics and moral values employing data from an ad-hoc online survey and the Music Learning Histories Dataset. To further characterise the music preferences of the participants the generalist/specialist (GS) score employed. We exploit both classification and regression approaches to assess the predictive power of music preferences for the prediction of demographic attributes as well as the moral values of the participants. Our findings point out that moral values are hard to predict (.62 AUROC_avg) solely by the music listening behaviours, while if basic sociodemographic information is provided the prediction score rises to 4% on average (.66 AUROC_avg), with the Purity foundation to be the one that is steadily the one with the highest accuracy scores. Similar results are obtained from the regression analysis. Finally, we provide with insights on the most predictive music behaviours associated with each moral value that can inform a wide range of applications from rehabilitation practices to communication campaign design.},
   pdf = {Preniqi_CMMR_SpringerLNCS_2023.pdf}}
 
+@article{bindi2023ai,
+	abbr = {Preprint},
+  	author={Bindi, Giovanni and Demerl{\'e}, Nils and Diaz, Rodrigo and Genova, David and Golvet, Ali{\'e}nor and Hayes, Ben and Huang, Jiawen and Liu, Lele and Martos, Vincent and Nabi, Sarah and Teresa Pelinski and Lenny Renault and Saurjya Sarkar and Pedro Sarmento and Cyrus Vahidi and Lewis Wolstanholme and Yixiao Zhang and Axel Roebel and Nick Bryan-Kinns and Jean-Louis Giavitto and Mathieu Barthet},
+	title={AI (r)evolution -- where are we heading? Thoughts about the future of music and sound technologies in the era of deep learning},
+	journal={arXiv},
+  	year={2023},
+	arxiv = {2310.18320}}
+
 @article{jincheng_preprint_2023_b,
 	abbr = {Preprint},
 	author = {Zhang, Jincheng and Fazekas, Gy{\"o}rgy and Saitis, Charalampos},
