--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,15 @@
 	title = {Hearing brightness: Multidisciplinary perspectives on a ubiquitous attribute of timbre and orchestration (in press)},
 	year = {2025}}
 
+@inproceedings{charis_cbmi_2025,
+	abbr = {CBMI},
+	year = {2025},
+	author = {Charalampos Saitis and Ben Heyderman and Vjosa Preniqi and Kyriaki Kalimeri and Johan Pauwels},
+	title = {Predicting moral values in lyrics through audio},
+	booktitle = {{IEEE International Conference on Content-Based Multimedia Indexing}},
+	code = {https://github.com/comma-lab/audio-mft},
+	abstract = {This paper introduces the task of music morality recognition—predicting moral values in song lyrics using only audio features, which can be considered a form of music tagging with a set of new and well-defined tags grounded in social and cultural psychology research. Unlike previous research focused on lyrics analysis alone, this approach examines how musical elements correlate with moral content in associated lyrics. We used human-annotated lyrics and a set of experiments with XGBoost classifiers to establish a baseline recognition performance. Despite working with small and imbalanced data, we found audio features often outperformed a state of the art language model fine-tuned to detect moral content in lyrics, with some moral values being more reliably predicted than others in line with related work. SAGE and SHAP analyses revealed that specific timbral, harmonic, and melodic features play a prominent role in audio-lyrics moral associations. These findings advance our understanding of musical semantics and have potential applications in music and multimedia recommender systems and healthcare interventions. We provide a public repository containing all code and data used in this study.}}
+
 @inproceedings{ben_ismir_2025,
 	abbr = {ISMIR},
 	year = {2025},
