--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{luca_ranlp_2025,
+	abbr = {RANLP},
+	year = {2025},
+	author = {Luca Marinelli and Iacopo Ghinassi and Charalampos Saitis},
+	title = {Leveraging RAG for a Low-Resource Audio-Aware Diachronic Analysis of Gendered Toy Marketing},
+	booktitle = {{The first Workshop on Natural Language Processing and Language Models for Digital Humanities @ RANLP 2025}},
+	code = {https://github.com/marinelliluca/low-resource-RAG},
+	abstract = {We performed a diachronic analysis of sound and language in toy commercials, leveraging retrieval-augmented generation (RAG) and open-weight language models in low-resource settings. A pool of 2508 UK toy advertisements spanning 14 years was semi-automatically annotated , integrating thematic coding of transcripts with audio annotation. With our RAG pipeline, we thematically coded and classified commercials by gender-target audience (feminine, masculine, or mixed) achieving substantial inter-coder reliability. In parallel, a music-focused multitask model was applied to annotate affective and mid-level musical perceptual attributes, enabling multimodal discourse analysis. Our findings reveal significant diachronic shifts and enduring patterns. Soundtracks classified as energizing registered an overall increase across distinct themes and audiences, but such increase was steeper for masculine-adjacent commercials. Moreover, themes stereotypically associated with masculinity paired more frequently with louder, distorted, and aggressive music, while stereotypically feminine themes with softer, calmer, and more harmonious soundtracks. Code and data to reproduce the results are available on github.com/marinelliluca/low-resource-RAG.}}
+
 @inproceedings{charis_OHOS_2025,
 	abbr = {OHOS},
 	abstract = {Orchestration can have undeniable effects on what listeners hear as changes in auditory brightness. But the precise source of our sensation of brightness in orchestral music is difficult to pinpoint. What is the locus of brightness in terms of perception and orchestration? Moreover, how do separate notions of timbre and orchestration spanning music theory, composition, acoustics, and psychology each offer possible explanations? In this chapter, we attempt to articulate and distinguish between two modes: timbral brightness---the psychophysical perception of brightness in a given instance of sound, and orchestral brightness---the experience of brightness in the configuration and unfolding of orchestral music. We approach the central question from a multidisciplinary vantage, attempting to hold any tensions between the two modes without resolution.},
